add playlogs aggregated statistics
